Fixed javascript error when loading list takes a long time
git-svn-id: https://docperl.svn.sourceforge.net/svnroot/docperl/trunk/docperl@276 df482c85-7f0f-0410-bf46-9d4e49b368ba

--- a/data/templates/default/module_head.html.tmpl
+++ b/data/templates/default/module_head.html.tmpl
@@ -46,10 +46,13 @@
 				next.style.display    = 'block';
 				current_file = select.options[index].value;
 			}
-			if (window.parent.menu.click_module)
-				window.parent.menu.click_module('[% location %]__[% module_1st %]__[% module.replace(':','_') %]');
-			else
-				setTimeout("window.parent.menu.click_module('[% location %]__[% module_1st %]__[% module.replace(':','_') %]')", 3000);
+			function set_history() {
+				if (window.parent.menu.click_module)
+					window.parent.menu.click_module('[% location %]__[% module_1st %]__[% module.replace(':','_') %]');
+				else
+					setTimeout("set_history()", 3000);
+			}
+			set_history();
 		//-->
 		</script>
 	</head>
