Prevented error from occuring when trying to open a branch with no parent
git-svn-id: https://docperl.svn.sourceforge.net/svnroot/docperl/trunk/docperl@277 df482c85-7f0f-0410-bf46-9d4e49b368ba

--- a/data/templates/default/list.js.tmpl
+++ b/data/templates/default/list.js.tmpl
@@ -251,6 +251,9 @@ function create_tree( files, container_id, path, counter ) {
 	ul.id        = 'ul__'+path;
 	level++;
 
+	// usually occurs when reopening trees at load when parients are not open
+	if ( !container ) return;
+
 	if ( !counter )
 		counter = path;
 	else
