Added showing the current docperl version on the list page
git-svn-id: https://docperl.svn.sourceforge.net/svnroot/docperl/trunk/docperl@282 df482c85-7f0f-0410-bf46-9d4e49b368ba

--- a/data/templates/default/list.html.tmpl
+++ b/data/templates/default/list.html.tmpl
@@ -132,6 +132,8 @@
 			[% IF Debug %]
 			<div id="debug"></div>
 			[% END %]
+			<br />
+			[% str_docperl_version %] [% VERSION %]
 		</div>
 		<hr />
 	</body>
