--- a/data/templates/default/strings.tmpl
+++ b/data/templates/default/strings.tmpl
@@ -53,4 +53,5 @@
 [%- str_link_clear_cache    = 'Clear Cache' -%]
 [%- str_link_firefox        = 'Bookmark for Firefox sidebar' -%]
 [%- str_link_bookmark       = 'Bookmark the page' -%]
+[%- str_docperl_version     = 'DocPerl Version' -%]
 
