Added the ability to clear recent modules
git-svn-id: https://docperl.svn.sourceforge.net/svnroot/docperl/trunk/docperl@285 df482c85-7f0f-0410-bf46-9d4e49b368ba

--- a/data/templates/default/list.js.tmpl
+++ b/data/templates/default/list.js.tmpl
@@ -420,6 +420,16 @@ function click_module( path ) {
 	display_recent(path);
 }
 
+function clear_recent() {
+	if (confirm('Clear recent module list?')) {
+		clear_cookie( 'DocPerl_recent');
+		var recent  = document.getElementById('ul_recent');
+		while (recent.firstChild)
+			recent.removeChild(recent.firstChild);
+		reset_count('recent');
+	}
+}
+
 /**
  *  @param path: The path to add to the recent list
  *  @todo
