Put the reset confirm string into the strings file, added js doc. Added a pointer cursor to indicate that clicking will do something
git-svn-id: https://docperl.svn.sourceforge.net/svnroot/docperl/trunk/docperl@288 df482c85-7f0f-0410-bf46-9d4e49b368ba

--- a/data/templates/default/list.html.tmpl
+++ b/data/templates/default/list.html.tmpl
@@ -86,7 +86,7 @@
 		<div id="recent_doc" style="display:none">
 			<h2 id="recent_head">
 			<a id="plus__recent" href="javascript: section_toggle('recent');" class="mod_expand" title="[% str_section_hide %]">-</a>
-			<span onclick="clear_recent();">[% str_list_recent %]</span> (<span id="recent_count">0</span>)</h2>
+			<span onclick="clear_recent();" style="cursor:pointer">[% str_list_recent %]</span> (<span id="recent_count">0</span>)</h2>
 			<div id="recent">
 				<ul id="ul_recent" class="mod_list" style="display:block">
 					<li></li>
