--- a/data/templates/default/strings.tmpl
+++ b/data/templates/default/strings.tmpl
@@ -29,6 +29,7 @@
 [%- str_list_hide           = 'Hide' -%]
 [%- str_section_show        = 'Show' -%]
 [%- str_section_hide        = 'Hide' -%]
+[%- str_reset_confirm       = 'Clear recent module list?' -%]
 
 [%- # Strings used by the list.html page -%]
 [%- str_adv_open_title      = 'Open Advanced Search Options' -%]
