Bug: 1762568 Added the ability to hide the default module from displaying in the history list. It will be default on for new installations and default off for current installations.
git-svn-id: https://docperl.svn.sourceforge.net/svnroot/docperl/trunk/docperl@310 df482c85-7f0f-0410-bf46-9d4e49b368ba

--- a/data/templates/default/list.js.tmpl
+++ b/data/templates/default/list.js.tmpl
@@ -368,6 +368,15 @@ function create_plus(path) {
  *  recent modules list.
  */
 function click_module( path ) {
+
+[% IF HideDefaultModule %]
+	// Check if the path is the default path and the first module to be displayed (and don't disply)
+	if ( !click_module.clicked_once && path == '[% DefaultModule %]' ) {
+		return;
+	}
+	click_module.clicked_once = true;
+[% END %]
+
 	var name = 'DocPerl_recent';
 	if ( exists_cookie(name) ) {
 		if (!display_recent.called)
