Bug: 1776712 Added the links to show a modules Test status. This is turned off by default.
git-svn-id: https://docperl.svn.sourceforge.net/svnroot/docperl/trunk/docperl@311 df482c85-7f0f-0410-bf46-9d4e49b368ba

--- a/data/templates/default/module_head.html.tmpl
+++ b/data/templates/default/module_head.html.tmpl
@@ -99,6 +99,11 @@
 							| <a title="See latest documentation on CPAN" href="http://search.cpan.org/search?query=[% IF location == 'perl' %]pod::[% END %][% module %]&amp;mode=module">
 								CPAN
 							</a>
+			[% IF location == 'inc' && ShowTestStatus %]
+							| <a title="See the CPAN test status" href="http://cpandeps.cantrell.org.uk/?module=[% module %]">
+								T
+							</a>
+			[%- END %]
 		[%- END %]
 						</div>
 	[%- END -%]
