Removed the frames page by default so that now module documentation is shown in an iframe on the index page which should make it more accessible.
git-svn-id: https://docperl.svn.sourceforge.net/svnroot/docperl/trunk/docperl@314 df482c85-7f0f-0410-bf46-9d4e49b368ba

--- a/data/templates/default/common.css.tmpl
+++ b/data/templates/default/common.css.tmpl
@@ -7,6 +7,14 @@ body {
 	padding:            0px;
 	margin:             0px;
 }
+body > #frames > tr > td {
+	width: 200px;
+	max-width: 200px;
+	overflow: hidden;
+}
+body > #frames > tr > td + td {
+	width: auto;
+}
 #headding {
 	position:           fixed;
 	background-color:   white;
