--- a/data/templates/default/css.css.tmpl
+++ b/data/templates/default/css.css.tmpl
@@ -87,6 +87,36 @@ li.level4 {
 	font-size:          0.8em;
 }
 
+body #headding {
+	width: 220px;
+	overflow: hidden;
+}
+#frames {
+	width: 100%;
+}
+#frames,
+#frames tr,
+#frames tr td {
+	padding: 0px;
+	margin: 0px;
+	border: 0px solid red;
+	border-collapse: collapse;
+}
+#frames tr td {
+	vertical-align: top;
+	border-right: 3px ridge grey;
+	width: 220px;
+}
+#frames tr td + td {
+	border-right: 0px solid grey;
+	width: auto;
+}
+iframe {
+	border: 0px solid white;
+	height: 10000px;
+	width: 100%;
+}
+
 body#list_page {
 	font-size:          8pt;
 	padding:            0px;
