--- a/data/templates/default/list.html.tmpl
+++ b/data/templates/default/list.html.tmpl
@@ -19,6 +19,7 @@
 			@import url("[% ENV.SCRIPT_NAME %]?page=css.css");
 		/* ]]> */-->
 		</style>
+		<script type="text/javascript" src="js/jquery-1.2.3.pack.js"></script>
 		<script type="text/javascript" src="?page=list.js&amp;sidebar=[% IF sidebar %]1[% ELSE %]0[% END %]"></script>
 		<script type="text/javascript">
 		<!--/* <![CDATA[ */
@@ -32,9 +33,10 @@
 		</script>
 	</head>
 	<body id="list_page" onload="setup_modules();">
+	<table id="frames"><tr><td>
 		<h1 id="headding" style="overflow: hidden">Perl&nbsp;Documentation</h1>
 		<!--h2>Search</h2-->
-		<center style="padding-bottom: 1em">
+		<center style="padding-bottom: 1em;">
 			<table>
 				<tr>
 					<td class="advanced">
@@ -126,8 +128,6 @@
 			<a href="?clearcache=1" target="_top">[% str_link_clear_cache %]</a>
 			[%- END %]
 			<br />
-			<a href="javascript:window.sidebar.addPanel('DocPerl sidebar',window.location+'&amp;sidebar=1','');">[% str_link_firefox %]</a>
-			<br />
 			<a href="?" id="current-link" onmouseover="update_current_link();">[% str_link_bookmark %]</a>
 			[% IF Debug %]
 			<div id="debug"></div>
@@ -136,5 +136,9 @@
 			[% str_docperl_version %] [% VERSION %]
 		</div>
 		<hr />
+	</td>
+	<td>
+		<iframe name="menu" src="?page=pod&amp;module=[% module %][% IF location %]&location=[% location %][% END %][% IF file %]&file=[% file %][% END %][% IF source %]&source=[% source %][% END %]" width="100%" height="100%"/>
+	</td></tr></table>
 	</body>
 </html>
