--- a/data/templates/default/list.html.tmpl
+++ b/data/templates/default/list.html.tmpl
@@ -138,7 +138,7 @@
 		<hr />
 	</td>
 	<td>
-		<iframe name="menu" src="?page=pod&amp;module=[% module %][% IF location %]&location=[% location %][% END %][% IF file %]&file=[% file %][% END %][% IF source %]&source=[% source %][% END %]" width="100%" height="100%"/>
+		<iframe name="main" src="?page=pod&amp;module=[% module %][% IF location %]&location=[% location %][% END %][% IF file %]&file=[% file %][% END %][% IF source %]&source=[% source %][% END %]" width="100%" height="100%"/>
 	</td></tr></table>
 	</body>
 </html>
