Reorganised all modules to be in the lib directory Changed scripts to look into the lib directory for the modules Fixed missing DocPerl favicon links in the list and module pages
git-svn-id: https://docperl.svn.sourceforge.net/svnroot/docperl/trunk/docperl@317 df482c85-7f0f-0410-bf46-9d4e49b368ba

--- a/data/templates/default/list.html.tmpl
+++ b/data/templates/default/list.html.tmpl
@@ -14,12 +14,13 @@
 		<meta name="copyright"   content="Copyright (c) 2006 Ivan Wills, All Rights Reserved" />
 		<meta name="description" content="" />
 		<meta name="keywords"    content="" />
+		<link rel="icon" href="[% static %]docperl.png" type="image/png" />
 		<style type="text/css">
 		<!--/* <![CDATA[ */
 			@import url("[% ENV.SCRIPT_NAME %]?page=css.css");
 		/* ]]> */-->
 		</style>
-		<script type="text/javascript" src="js/jquery-1.2.3.pack.js"></script>
+		<script type="text/javascript" src="[% static %]js/jquery-1.2.3.pack.js"></script>
 		<script type="text/javascript" src="?page=list.js&amp;sidebar=[% IF sidebar %]1[% ELSE %]0[% END %]"></script>
 		<script type="text/javascript">
 		<!--/* <![CDATA[ */
