--- a/data/templates/default/list.html.tmpl
+++ b/data/templates/default/list.html.tmpl
@@ -14,7 +14,7 @@
 		<meta name="copyright"   content="Copyright (c) 2006 Ivan Wills, All Rights Reserved" />
 		<meta name="description" content="" />
 		<meta name="keywords"    content="" />
-		<link rel="icon" href="[% static %]docperl.png" type="image/png" />
+		<link rel="icon" href="[% static %]docperl1.png" type="image/png" />
 		<style type="text/css">
 		<!--/* <![CDATA[ */
 			@import url("[% ENV.SCRIPT_NAME %]?page=css.css");
@@ -139,7 +139,7 @@
 		<hr />
 	</td>
 	<td>
-		<iframe name="main" id="main" src="?page=pod&amp;module=[% module %][% IF location %]&location=[% location %][% END %][% IF file %]&file=[% file %][% END %][% IF source %]&source=[% source %][% END %]" width="100%" height="100%"/>
+		<iframe name="main" id="main" src="?page=pod&amp;module=[% module %][% IF location %]&location=[% location %][% END %][% IF file %]&file=[% file %][% END %][% IF source %]&source=[% source %][% END %]"/>
 	</td></tr></table>
 	</body>
 </html>
