Made the iframe resize so that it doesn't need scrolling
git-svn-id: https://docperl.svn.sourceforge.net/svnroot/docperl/trunk/docperl@328 df482c85-7f0f-0410-bf46-9d4e49b368ba

--- a/data/templates/default/list.js.tmpl
+++ b/data/templates/default/list.js.tmpl
@@ -105,7 +105,11 @@ function animate_headding () {
 		state = 'perl';
 		head.replaceChild( document.createTextNode('Perl\240Documentation'), head.firstChild );
 	}
+
 	setTimeout( fade_headding, [% animation %] );
+
+	var iframe = document.getElementById('main');
+	iframe.style.height = iframe.contentWindow.document.body.scrollHeight + 'px';
 }
 
 /**
