--- a/data/templates/default/common.css.tmpl
+++ b/data/templates/default/common.css.tmpl
@@ -104,13 +104,13 @@ body > #frames > tr > td + td {
 #api div ul ul {
 	margin-left:        10px;
 }
-.hirachy {
+.hierarchy {
 	float:              right;
 	border:             1px solid black;
 	border-radius:      3px;
 	-moz-border-radius: 3px;
 }
-#api .hirachy > div {
+#api .hierarchy > div {
 	border:             1px solid black;
 	border-left:        0px;
 	border-right:       0px;
