Added GraphViz support for displaying class inheritance
git-svn-id: https://docperl.svn.sourceforge.net/svnroot/docperl/trunk/docperl@335 df482c85-7f0f-0410-bf46-9d4e49b368ba

--- a/data/templates/default/api.html.tmpl
+++ b/data/templates/default/api.html.tmpl
@@ -6,6 +6,10 @@
 		<h1>[% module %]</h1>
 		<div class="hierarchy">
 			<div>Class Inheritance</div>
+		[% IF api.hierarchy_graph %]
+			<img src="?page=hierarchy.png&module=[% module %]&location=[% location %]" usemap="#hierarchy" style="border: 0px;"/>
+			[% api.hierarchy_graph %]
+		[% ELSE %]
 			[% INCLUDE class_hierarchy
 				list  = api.hierarchy,
 				first = 1
@@ -29,6 +33,7 @@
 				</ul>
 				[% END %]
 			[% END %]
+		[% END %]
 		</div>
 		[% UNLESS api %]
 		API Missing
