--- a/data/templates/default/list.js.tmpl
+++ b/data/templates/default/list.js.tmpl
@@ -71,7 +71,7 @@ function setup_modules() {
 		setup_modules.group++;
 		setTimeout( setup_modules, 10 );
 		setTimeout( fade_headding, [% animation %] );
-		setTimeout(set_iframe_height, 1000);
+		setTimeout( set_iframe_height, 100 );
 	}
 	else if ( setup_modules.group == 5 ) {
 		level = 0;
@@ -96,22 +96,22 @@ function set_iframe_height () {
 	var iframe = $('#main');
 
 	if (iframe) {
-		var list   = $('#list_td');
+		var list   = $('#list_div');
 		var height = 800;
 
-		if ( !iframe.contentWindow
-			|| !iframe.contentWindow.document
-			|| !iframe.contentWindow.document.body
-			|| iframe.contentWindow.document.body.scrollHeight < list.height()
+		if ( !iframe.get(0).contentWindow
+			|| !iframe.get(0).contentWindow.document
+			|| !iframe.get(0).contentWindow.document.body
+			|| iframe.get(0).contentWindow.document.body.scrollHeight < list.height()
 		)
 			height = list.height();
 		else
-			height = iframe.contentWindow.document.body.scrollHeight;
+			height = iframe.get(0).contentWindow.document.body.scrollHeight;
 
 		iframe.height(height);
 	}
 
-	setTimeout(set_iframe_height, 1000);
+	setTimeout(set_iframe_height, 500);
 }
 
 /**
