Partially fixed problem with display in IE6
git-svn-id: https://docperl.svn.sourceforge.net/svnroot/docperl/trunk/docperl@344 df482c85-7f0f-0410-bf46-9d4e49b368ba

--- a/data/templates/default/css.css.tmpl
+++ b/data/templates/default/css.css.tmpl
@@ -35,7 +35,7 @@ h1 {
 	padding-left:       4px;
 }
 h2 {
-	padding-left:       8px;
+	padding:            5px 2px 5px 8px;
 	background-color:   #BBC5BB;
 }
 h3 {
@@ -107,7 +107,7 @@ body #headding {
 	border-right: 3px ridge grey;
 	width: 220px;
 }
-#frames tr td + td {
+#frames tr td.right {
 	border-right: 0px solid grey;
 	width: auto;
 }
