--- a/data/templates/default/list.html.tmpl
+++ b/data/templates/default/list.html.tmpl
@@ -14,12 +14,8 @@
 		<meta name="copyright"   content="Copyright (c) 2006 Ivan Wills, All Rights Reserved" />
 		<meta name="description" content="" />
 		<meta name="keywords"    content="" />
-		<link rel="icon" href="[% static %]docperl1.png" type="image/png" />
-		<style type="text/css">
-		<!--/* <![CDATA[ */
-			@import url("[% ENV.SCRIPT_NAME %]?page=css.css");
-		/* ]]> */-->
-		</style>
+		<link rel="icon"       href="[% static %]docperl1.png" type="image/png" />
+		<link rel="stylesheet" href="?page=css.css"            type="text/css"  />
 		<script type="text/javascript" src="[% static %]js/jquery-1.2.6.min.js"></script>
 		<script type="text/javascript" src="?page=list.js&amp;sidebar=[% IF sidebar %]1[% ELSE %]0[% END %]"></script>
 		<script type="text/javascript">
@@ -34,113 +30,127 @@
 		</script>
 	</head>
 	<body id="list_page" onload="setup_modules();">
-	<table id="frames"><tr><td id="list_td"><div id="list_div">
-		<h1 id="headding" style="overflow: hidden">Perl&nbsp;Documentation</h1>
-		<!--h2>Search</h2-->
-		<center style="padding-bottom: 1em;">
-			<table>
-				<tr>
-					<td class="advanced">
-						<div id="adv_open"  onclick="adv_open(); " title="[% str_adv_open_title %] ">&#8595;</div>
-						<div id="adv_close" onclick="adv_close();" title="[% str_adv_close_title %]">&#8593;</div>
-					</td>
-					<td><input type="text" name="search" id="search" size="15" onkeyup="search(false);" title="[% str_search_input_title %]"/></td>
-					<td><input type="button" value="Search" onclick="search(true);"/></td>
-				</tr>
-				<tr>
-					<td colspan="3" style="vertical-align: middle; text-align: center; font-size: 0.8em;">
-						<div id="advanced">
-							<input type="checkbox" id="type_names"     name="type" value="modules" checked="checked" /><label>[% str_search_check_module %]</label>&nbsp;&nbsp;
-							<input type="checkbox" id="type_pod"       name="type" value="pod"      /><label>[% str_search_check_pod %]</label>&nbsp;&nbsp;
-							<input type="checkbox" id="type_functions" name="type" value="functions"/><label>[% str_search_check_func %]</label><br/>
-							<input type="checkbox" id="type_cpan"      name="type" value="functions" onchange="adv_cpan();"/><label>[% str_search_check_cpan %]</label>&nbsp;&nbsp;
-							<select name="mode" id="mode" disabled="disabled">
-								<option value="all"   >[% str_search_cpan_all    %]</option>
-								<option value="module">[% str_search_cpan_module %]</option>
-								<option value="dist"  >[% str_search_cpan_dist   %]</option>
-								<option value="author">[% str_search_cpan_author %]</option>
-							</select>
-						</div>
-					</td>
-				</tr>
-			</table>
-		</center>
-		<div id="functions_doc" style="display:none">
-			<h2 id="functions_head">
-			<a id="plus__functions" href="javascript: section_toggle('functions');" class="mod_expand" title="[% str_section_hide %]">-</a>
-			[% str_list_search_func %] (<span id="functions_count">0</span>)</h2>
-			<div id="functions">
+<table id="frames">
+	<tr>
+		<td id="list_td" class="left">
+			<div id="list_div">
+				<h1 id="headding" style="overflow: hidden">Perl&nbsp;Documentation</h1>
+				<center style="padding-bottom: 1em;">
+					<table>
+						<tr>
+							<td class="advanced">
+								<div id="adv_open"  onclick="adv_open(); " title="[% str_adv_open_title %] ">&#8595;</div>
+								<div id="adv_close" onclick="adv_close();" title="[% str_adv_close_title %]">&#8593;</div>
+							</td>
+							<td><input type="text" name="search" id="search" size="15" onkeyup="search(false);" title="[% str_search_input_title %]"/></td>
+							<td><input type="button" value="Search" onclick="search(true);"/></td>
+						</tr>
+						<tr>
+							<td colspan="3" style="vertical-align: middle; text-align: center; font-size: 0.8em;">
+								<div id="advanced">
+									<input type="checkbox" id="type_names"     name="type" value="modules" checked="checked" /><label>[% str_search_check_module %]</label>&nbsp;&nbsp;
+									<input type="checkbox" id="type_pod"       name="type" value="pod"      /><label>[% str_search_check_pod %]</label>&nbsp;&nbsp;
+									<input type="checkbox" id="type_functions" name="type" value="functions"/><label>[% str_search_check_func %]</label><br/>
+									<input type="checkbox" id="type_cpan"      name="type" value="functions" onchange="adv_cpan();"/><label>[% str_search_check_cpan %]</label>&nbsp;&nbsp;
+									<select name="mode" id="mode" disabled="disabled">
+										<option value="all"   >[% str_search_cpan_all    %]</option>
+										<option value="module">[% str_search_cpan_module %]</option>
+										<option value="dist"  >[% str_search_cpan_dist   %]</option>
+										<option value="author">[% str_search_cpan_author %]</option>
+									</select>
+								</div>
+							</td>
+						</tr>
+					</table>
+				</center>
+				<div id="functions_doc" style="display:none">
+					<h2 id="functions_head">
+						<a id="plus__functions" href="javascript: section_toggle('functions');" class="mod_expand" title="[% str_section_hide %]">-</a>
+						[% str_list_search_func %] (<span id="functions_count">0</span>)
+					</h2>
+					<div id="functions"></div>
+				</div>
+				<div id="pod_doc" style="display:none">
+					<h2 id="pod_head">
+						<a id="plus__pod" href="javascript: section_toggle('pod');" class="mod_expand" title="[% str_section_hide %]">-</a>
+						[% str_list_search_pod %] (<span id="pod_count">0</span>)
+					</h2>
+					<div id="pod"></div>
+				</div>
+				<div id="names_doc" style="display:none">
+					<h2 id="names_head">
+						<a id="plus__names" href="javascript: section_toggle('names');" class="mod_expand" title="[% str_section_hide %]">-</a>
+						[% str_list_search_module %] (<span id="names_count">0</span>)
+					</h2>
+					<div id="names"></div>
+				</div>
+				<div id="recent_doc" style="display:none">
+					<h2 id="recent_head">
+						<a id="plus__recent" href="javascript: section_toggle('recent');" class="mod_expand" title="[% str_section_hide %]">-</a>
+						<span onclick="clear_recent();" style="cursor:pointer">[% str_list_recent %]</span> (<span id="recent_count">0</span>)
+					</h2>
+					<div id="recent">
+						<ul id="ul_recent" class="mod_list" style="display:block">
+							<li></li>
+						</ul>
+					</div>
+				</div>
+				[% UNLESS LocalOnly %]
+				<div id="perl_doc">
+					<h2 id="perl_head">
+						<span class="info"><img src="[% static %]info.png" alt="info" border="0"/><span>[% perl_path %]</span></span>
+						<a id="plus__perl" href="javascript: section_toggle('perl');" class="mod_expand" title="[% str_section_hide %]">-</a>
+						[% PerlLabel || str_list_perl %] (<span id="perl_count">0</span>)
+					</h2>
+					<div id="perl"></div>
+				</div>
+				[%- END %]
+				<div id="local_doc">
+					<h2 id="local_head">
+						<span class="info"><img src="[% static %]info.png" alt="info" border="0"/><span>[% local_path %]</span></span>
+						<a id="plus__local" href="javascript: section_toggle('local');" class="mod_expand" title="[% str_section_hide %]">-</a>
+						[% LocalLabel || str_list_local %] (<span id="local_count">0</span>)
+					</h2>
+					<div id="local"></div>
+				</div>
+				[% UNLESS LocalOnly %]
+				<div id="inc_doc">
+					<h2 id="inc_head">
+						<span class="info"><img src="[% static %]info.png" alt="info" border="0"/><span>[% inc_path %]</span></span>
+						<a id="plus__inc" href="javascript: section_toggle('inc');" class="mod_expand" title="[% str_section_hide %]">-</a>
+						[% IncLabel || str_list_inc %] (<span id="inc_count">0</span>)
+					</h2>
+					<div id="inc">
+					</div>
+				</div>
+				[%- END %]
+				<hr />
+				<div style="padding-left: 3px">
+					<a href="http://docperl.sourceforge.net/" target="_blank">[% str_link_docperl_home %]</a>
+					[% IF ClearCache -%]
+					<br />
+					<a href="?clearcache=1" target="_top">[% str_link_clear_cache %]</a>
+					[%- END %]
+					<br />
+					<a href="?" id="current-link" onmouseover="update_current_link();">[% str_link_bookmark %]</a>
+					[% IF Debug %]
+					<div id="debug"></div>
+					[% END %]
+					<br />
+					[% str_docperl_version %] [% VERSION %]
+				</div>
+				<hr />
 			</div>
-		</div>
-		<div id="pod_doc" style="display:none">
-			<h2 id="pod_head">
-			<a id="plus__pod" href="javascript: section_toggle('pod');" class="mod_expand" title="[% str_section_hide %]">-</a>
-			[% str_list_search_pod %] (<span id="pod_count">0</span>)</h2>
-			<div id="pod">
-			</div>
-		</div>
-		<div id="names_doc" style="display:none">
-			<h2 id="names_head">
-			<a id="plus__names" href="javascript: section_toggle('names');" class="mod_expand" title="[% str_section_hide %]">-</a>
-			[% str_list_search_module %] (<span id="names_count">0</span>)</h2>
-			<div id="names">
-			</div>
-		</div>
-		<div id="recent_doc" style="display:none">
-			<h2 id="recent_head">
-			<a id="plus__recent" href="javascript: section_toggle('recent');" class="mod_expand" title="[% str_section_hide %]">-</a>
-			<span onclick="clear_recent();" style="cursor:pointer">[% str_list_recent %]</span> (<span id="recent_count">0</span>)</h2>
-			<div id="recent">
-				<ul id="ul_recent" class="mod_list" style="display:block">
-					<li></li>
-				</ul>
-			</div>
-		</div>
-		[% UNLESS LocalOnly %]
-		<div id="perl_doc">
-			<h2 id="perl_head"><span class="info"><img src="[% static %]info.png" alt="info" border="0"/><span>[% perl_path %]</span></span>
-			<a id="plus__perl" href="javascript: section_toggle('perl');" class="mod_expand" title="[% str_section_hide %]">-</a>
-			[% PerlLabel || str_list_perl %] (<span id="perl_count">0</span>)</h2>
-			<div id="perl">
-			</div>
-		</div>
-		[%- END %]
-		<div id="local_doc">
-			<h2 id="local_head"><span class="info"><img src="[% static %]info.png" alt="info" border="0"/><span>[% local_path %]</span></span>
-			<a id="plus__local" href="javascript: section_toggle('local');" class="mod_expand" title="[% str_section_hide %]">-</a>
-			[% LocalLabel || str_list_local %] (<span id="local_count">0</span>)</h2>
-			<div id="local">
-			</div>
-		</div>
-		[% UNLESS LocalOnly %]
-		<div id="inc_doc">
-			<h2 id="inc_head"><span class="info"><img src="[% static %]info.png" alt="info" border="0"/><span>[% inc_path %]</span></span>
-			<a id="plus__inc" href="javascript: section_toggle('inc');" class="mod_expand" title="[% str_section_hide %]">-</a>
-			[% IncLabel || str_list_inc %] (<span id="inc_count">0</span>)</h2>
-			<div id="inc">
-			</div>
-		</div>
-		[%- END %]
-		<hr />
-		<div style="padding-left: 3px">
-			<a href="http://docperl.sourceforge.net/" target="_blank">[% str_link_docperl_home %]</a>
-			[% IF ClearCache -%]
-			<br />
-			<a href="?clearcache=1" target="_top">[% str_link_clear_cache %]</a>
-			[%- END %]
-			<br />
-			<a href="?" id="current-link" onmouseover="update_current_link();">[% str_link_bookmark %]</a>
-			[% IF Debug %]
-			<div id="debug"></div>
-			[% END %]
-			<br />
-			[% str_docperl_version %] [% VERSION %]
-		</div>
-		<hr />
-		</div>
-	</td>
-	<td>
-		<iframe name="main" id="main" src="?page=pod&amp;module=[% module %][% IF location %]&location=[% location %][% END %][% IF file %]&file=[% file %][% END %][% IF source %]&source=[% source %][% END %]"/>
-	</td></tr></table>
+		</td>
+		<td class="right">
+			<iframe
+				name="main"
+				id="main"
+				scrolling="no"
+				src="?page=pod&amp;module=[% module %][% IF location %]&location=[% location %][% END %][% IF file %]&file=[% file %][% END %][% IF source %]&source=[% source %][% END %]"
+			/>
+		</td>
+	</tr>
+</table>
 	</body>
 </html>
