Fixed extra border showing in search box
git-svn-id: https://docperl.svn.sourceforge.net/svnroot/docperl/trunk/docperl@349 df482c85-7f0f-0410-bf46-9d4e49b368ba

--- a/data/templates/default/css.css.tmpl
+++ b/data/templates/default/css.css.tmpl
@@ -111,6 +111,9 @@ body #headding {
 	border-right: 0px solid grey;
 	width: auto;
 }
+#frames tr td table td {
+	border: 0px;
+}
 iframe {
 	border: 0px solid white;
 	height: 20000px;
@@ -223,4 +226,7 @@ body#list_page {
 #list_page #advanced label,
 #list_page #advanced select {
 	font-size:         1.2em;
+}
+#search {
+	padding-bottom: 1em;
 }
