--- a/data/templates/default/list.html.tmpl
+++ b/data/templates/default/list.html.tmpl
@@ -35,7 +35,7 @@
 		<td id="list_td" class="left">
 			<div id="list_div">
 				<h1 id="headding" style="overflow: hidden">Perl&nbsp;Documentation</h1>
-				<center style="padding-bottom: 1em;">
+				<div id="search">
 					<table>
 						<tr>
 							<td class="advanced">
@@ -62,7 +62,7 @@
 							</td>
 						</tr>
 					</table>
-				</center>
+				</div>
 				<div id="functions_doc" style="display:none">
 					<h2 id="functions_head">
 						<a id="plus__functions" href="javascript: section_toggle('functions');" class="mod_expand" title="[% str_section_hide %]">-</a>
