Fixed all the ClearCache statements to being consistantly set and checked
git-svn-id: https://docperl.svn.sourceforge.net/svnroot/docperl/trunk/docperl@351 df482c85-7f0f-0410-bf46-9d4e49b368ba

--- a/data/templates/default/list.html.tmpl
+++ b/data/templates/default/list.html.tmpl
@@ -127,7 +127,7 @@
 				<hr />
 				<div style="padding-left: 3px">
 					<a href="http://docperl.sourceforge.net/" target="_blank">[% str_link_docperl_home %]</a>
-					[% IF ClearCache -%]
+					[% IF ClearCache == 'on' -%]
 					<br />
 					<a href="?clearcache=1" target="_top">[% str_link_clear_cache %]</a>
 					[%- END %]
