--- a/data/templates/default/cpan.css.tmpl
+++ b/data/templates/default/cpan.css.tmpl
@@ -6,31 +6,31 @@
  *  Emulates the CPAN style sheets
  */
 
-pre {
+.right pre {
 	background-color:   #EEE;
 	border:             solid 1px grey;
 	padding:            12px;
 	font-size:          9pt;
 }
-code {
+.right code {
 	font-weight:        lighter;
 }
-body {
+.right body {
 	font-family:        arial,sans-serif;
 	font-size:          11pt;
 }
-h1, h2, h3, h4, h5, h6 {
+.right h1, .right h2, .right h3, .right h4, .right h5, .right h6 {
 	font-family:        sans-serif;
 	-moz-border-radius: 5px;
 }
-h1 a, h2 a, h3 a, h4 a, h5 a, h6 a {
+.right h1 a, .right h2 a, .right h3 a, .right h4 a, .right h5 a, .right h6 a {
 	text-decoration:    none;
 	color:              #069;
 }
-h1 {
+.right h1 {
 	font-size:          large;
 }
-h1 div.up {
+.right h1 div.up {
 	border:             1px solid;
 	height:             16px;
 	width:              16px;
@@ -38,10 +38,10 @@ h1 div.up {
 	font-size:          smaller;
 	padding:            0px 3px 0px 3px;
 }
-h1 a.code,
-h2 a.code,
-h3 a.code,
-h4 a.code {
+.right h1 a.code,
+.right h2 a.code,
+.right h3 a.code,
+.right h4 a.code {
 	border:             1px solid;
 	height:             16px;
 	width:              16px;
@@ -50,48 +50,49 @@ h4 a.code {
 	vertical-align:     middle;
 	padding:            0px 4px 0px 4px;
 }
-h2 {
+.right h2 {
 	font-size:          medium;
 }
-h3 {
+.right h3 {
 }
-h4 {
+.right h4 {
 }
-hr {
+.right hr {
 }
 
-dl dl {
+.right dl dl {
 	margin-left:        2em;
 }
-dt {
+.right dt {
 	font-weight:        lighter;
 }
-td {
+.right td {
 	padding-left:       2px;
 	padding-right:      2px;
 }
-ul.menu, ul.menu ul {
+.right ul.menu, .right ul.menu ul {
 	list-style-type:    none;
 }
-ul.menu li, ul.menu ul li {
+.right ul.menu li, .right ul.menu ul li {
 	list-style-type:    none;
 }
-li.level1 a,
-li.level2 a,
-li.level3 a,
-li.level4 a {
+.right li.level1 a,
+.right li.level2 a,
+.right li.level3 a,
+.right li.level4 a {
 	text-decoration:    none;
 	color:              #069;
+	font-size:          1em;
 }
-li.level1 {
+.right li.level1 {
 	padding-left:       0em;
 }
-li.level2 {
+.right li.level2 {
 	padding-left:       3em;
 }
-li.level3 {
+.right li.level3 {
 	padding-left:       6em;
 }
-li.level4 {
+.right li.level4 {
 	padding-left:       9em;
 }
