--- a/data/templates/default/list.html.tmpl
+++ b/data/templates/default/list.html.tmpl
@@ -16,8 +16,10 @@
 		<meta name="keywords"    content="" />
 		<link rel="icon"       href="[% static %]docperl1.png" type="image/png" />
 		<link rel="stylesheet" href="?page=css.css"            type="text/css"  />
+		<link rel="stylesheet" href="?page=common.css"         type="text/css"  />
+		<link rel="stylesheet" href="?page=cpan.css"           type="text/css"  />
 		<script type="text/javascript" src="[% static %]js/jquery-1.2.6.min.js"></script>
-		<script type="text/javascript" src="?page=list.js&amp;sidebar=[% IF sidebar %]1[% ELSE %]0[% END %]"></script>
+		<script type="text/javascript" src="?page=list.js"></script>
 		<script type="text/javascript">
 		<!--/* <![CDATA[ */
 			[% perl %]
